# DistributedQC_cpp

./: CMakeLists.txt  Dockerfile
include/: module.h  shormods.h  stdmods.h
src/: main.cpp
src/modules/: module.cpp  shormods.cpp  stdmods.cpp
